The SiI3124 was implemented at a time when the ATA/ACS2 DATA SET MANAGEMENT/TRIM command did not exist.  As such, the (presumably immutable) lookup table in the chip does not know that this command indicates a data write to follow.  Use the PRB Protocol Override functionality to tell the chip the protocol we need for this command.

For PR kern/51756.